content/terraform-cdk/v0.17.x/docs/cdktf/release/upgrade-guide-v0-17.mdx
---
page_title: Upgrading to CDKTF Version 0.17
description: >-
  Breaking changes to AWS Quicksight resources and removal of deprecated feature flags
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-04-29T15:45:46-05:00
# END AUTO GENERATED METADATA
---

# Upgrading to CDK for Terraform Version 0.17

0.17 is focused around fixing issues with the [AWS Quicksight](https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/quicksight_template) resources. We also removed the deprecated feature flags that were used to enable potentially breaking changes in previous releases.

## AWS Quicksight

A few individual Terraform Resources have very deeply nested schemas with a lot of attributes. This blows up the config classes and slows down the code generation for languages besides TypeScript. To work around this we sometimes limit the depth of the config classes and use `any` on deeper levels, and we directly expose some attributes as `any` on the top level config class.

- `aws_quicksight_template.definition`, `aws_quicksight_dashboard.definition`, and `aws_quicksight_analysis.definition` are set to `any`

This means when configuring these attributes you need to pass in the configuration as objects and with snake case keys. Alternatively you can also use the [escape hatch](concepts/resources#escape-hatch).

### Removal: The feature flags that go into the `context` field of the `cdktf.json` file were removed

CDKTF used to use feature flags to enable potentially breaking behaviors in a release. These are no longer needed since most of the changes we introduce from here can not be hidden behind feature flags. The behavior for 0.17 is the same as in 0.16 with this configuration:

```json
{
  "context": {
    "excludeStackIdFromLogicalIds": "true",
    "allowSepCharsInLogicalIds": "true"
  }
}
```

You can remove these keys from your `context` field in your `cdktf.json` file.
